--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     margin: 0 auto;
 }
 
-img {
+.thumbnail img {
     border-radius: 50%;
     align-items: center;
     justify-content: center;
