--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     list-style-type: none;
-    font-family: 'Helvetica Neue', Helvetica, Arial;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 30px;
     height: 100%;
     padding-bottom: 100px;
